--- a/app/src/main/res/layout/listitemfavorite.xml
+++ b/app/src/main/res/layout/listitemfavorite.xml
@@ -22,7 +22,7 @@
 
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/delete_icon"
                 android:layout_width="38dp"
                 android:layout_height="39dp"
                 android:layout_alignParentTop="true"
@@ -30,7 +30,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="22dp"
                 android:layout_marginBottom="4dp"
-                app:srcCompat="@drawable/ic_acces_icon" />
+                app:srcCompat="@drawable/ic_cancel" />
 
             <ImageView
                 android:id="@+id/bookImage"
